WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269005
[WebGPU] default limit for maxBufferSize is incorrect
https://bugs.webkit.org/show_bug.cgi?id=269005
Summary
[WebGPU] default limit for maxBufferSize is incorrect
Mike Wyrzykowski
Reported
2024-02-08 11:22:27 PST
[WebGPU] default limit for maxBufferSize is incorrect
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-08 11:22:47 PST
<
rdar://problem/122561559
>
Mike Wyrzykowski
Comment 2
2024-02-08 11:32:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24088
EWS
Comment 3
2024-02-08 18:26:23 PST
Committed
274336@main
(5e7cc9ef5694): <
https://commits.webkit.org/274336@main
> Reviewed commits have been landed. Closing PR #24088 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug