[WebGPU] default limit for maxBufferSize is incorrect https://bugs.webkit.org/show_bug.cgi?id=269005 <radar://122561559>

Reviewed by Tadeu Zagallo.

The limit was raised to 256MB, but we were still reporting 128MB.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUAdapterImpl.cpp:
(WebCore::WebGPU::AdapterImpl::requestDevice):
Use the same default limits as WebGPU.framework.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::defaultLimits):
(wgpuDefaultLimits):
* Source/WebGPU/WebGPU/WebGPUExt.h:

Canonical link: https://commits.webkit.org/274336@main